# vast

./: .clang-format  CMakeLists.txt  CMakePresets.json  CONTRIBUTING.md  HACKING.md  LICENSE  PULL_REQUEST_TEMPLATE.md  README.md  TEMPLATE.md  vcpkg.json
.github/workflows/: macos.yml  release.yml  ubuntu.yml  windows.yml
cmake/: SourcesAndHeaders.cmake  StandardSettings.cmake  dev-mode.cmake  install-rules.cmake  variables.cmake
include/Vast/: temp.hpp
source/: lib.cpp
src/: CMakeLists.txt  main.cpp
test/: CMakeLists.txt
test/source/: vast_test.cpp
